kubernetes/pods/nginxDemo/exampleIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: example
spec:
  rules:
  - host: "localhost"
    http:
      paths:
      - backend:
          service:
            name: apple-service
            port:
              number: 5678
        path: /apple
        pathType: Exact
      - backend:
          service:
            name: banana-service
            port:
              number: 5678
        path: /banana
        pathType: Exact
status:
  loadBalancer: {}
